--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="sk">
-{% include head.html %}
+  {% include head.html %}
 
-<style>
-	body,
-	.sticky-footer-wrapper {
-		min-height: 100vh;
-	}
-</style>
+  <style>
+    body {
+      font-family: "Roboto", sans-serif;
+    }
 
+    body,
+    .sticky-footer-wrapper {
+      min-height: 100vh;
+    }
 
-<body>
-	<div class="d-flex flex-column sticky-footer-wrapper">
-		{% include nav-bar.html %}
-		<main class="flex-fill">
-			{{ content }}
-		</main>
-		{% include footer.html %}
-	</div>
+    .parallax {
+      background-image: linear-gradient(
+          rgba(255, 255, 255, 0.9),
+          rgba(255, 255, 255, 0.2)
+        ),
+        url("images/parallax-image.jpg");
+      height: 400px;
 
-	{% include script.html %}
-</body>
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
+    @media only screen and (max-device-width: 1024px) {
+      .parallax {
+        background-attachment: scroll;
+      }
+    }
+
+    .text-box {
+      height: 400px;
+      padding-top: 100px;
+    }
+  </style>
+
+  <body id="page-top">
+    <div class="d-flex flex-column sticky-footer-wrapper">
+      {% include nav-bar.html %}
+      <main class="flex-fill">
+        {{ content }}
+      </main>
+      {% include footer.html %}
+    </div>
+
+    {% include script.html %}
+  </body>
 </html>
