--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,12 @@
 <footer class="page-footer">
-
-    <div class="container-fluid text-center text-md-left text-light" style="background-color: {{ site.secondary_color }};">
-    </div>
-    <div class="text-light text-center py-1" style="background-color: {{ site.primary_color }};">© 2020 Copyright: VALS s.r.o.
-    </div>
+  <div
+    class="container-fluid text-center text-md-left text-light"
+    style="background-color: {{ site.secondary_color }};"
+  ></div>
+  <div
+    class="text-light text-center py-1"
+    style="background-color: {{ site.primary_color }};"
+  >
+    © 2020 Copyright: VALS s.r.o.
+  </div>
 </footer>
