--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,9 +1,14 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159970528-1"></script>
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=UA-159970528-1"
+></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
 
-    gtag('config', 'UA-159970528-1');
+  gtag("config", "UA-159970528-1");
 </script>
