--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,17 @@
     name="description"
     content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}"
   />
+  <meta
+    property="og:site_name"
+    content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}"
+  />
+  <meta
+    property="og:description"
+    content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}"
+  />
+
+  <meta property="og:url" content="{{ site.url }}" />
+  <meta property="og:image" content="/images/parallax-image.jpg" />
 
   <link
     rel="apple-touch-icon"
