HTML head image link typo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,10 @@
   />
 
   <meta property="og:url" content="{{ site.url }}" />
-  <meta property="og:image" content="/images/parallax-image.jpg" />
+  <meta
+    property="og:image"
+    content="https://www.vseobecna-ambulancia-ke.sk/images/parallax-image.jpg"
+  />
 
   <link
     rel="apple-touch-icon"
