--- a/_includes/nav-bar.html
+++ b/_includes/nav-bar.html
@@ -1,7 +1,4 @@
-<nav
-  class="navbar navbar-expand-lg navbar-dark"
-  style="background-color: {{ site.primary_color }};"
->
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: {{ site.primary_color }};">
   <div class="container-fluid">
     <a class="navbar-brand js-scroll-trigger ml-1 mr-4" href="/#page-top">
       <div class="row">MUDr. Valéria Kuráková</div>
@@ -9,33 +6,22 @@
         Všeobecný lekár pre dospelých
       </div>
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarText"
-      aria-controls="navbarText"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse mx-3" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active js-scroll-trigger">
-          <a class="nav-link" href="#page-top"
-            >Domov<span class="sr-only">(current)</span></a
-          >
+          <a class="nav-link" href="#page-top">Domov<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active js-scroll-trigger" href="/#opening-hours"
-            >Ordinačné hodiny<span class="sr-only">(current)</span></a
-          >
+          <a class="nav-link active js-scroll-trigger" href="/#opening-hours">Ordinačné hodiny<span
+              class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active js-scroll-trigger" href="/#contact"
-            >Kontakt<span class="sr-only">(current)</span></a
-          >
+          <a class="nav-link active js-scroll-trigger" href="/#contact">Kontakt<span
+              class="sr-only">(current)</span></a>
         </li>
       </ul>
       <div class="row text-light">
