--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
   <div class="container-fluid text-center text-md-left text-light"
     style="background-color: {{ site.secondary_color }};"></div>
   <div class="text-light text-center py-1" style="background-color: {{ site.primary_color }};">
-    © 2019- Copyright: VALS s.r.o.
+    © 2019-2022 Copyright: VALS s.r.o.
   </div>
 </footer>
